external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_as_function_params.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_as_function_params.move:3:23
  │
3 │     fun add_signed(a: i64, b: i64): i64 {
  │                       ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_as_function_params.move:3:31
  │
3 │     fun add_signed(a: i64, b: i64): i64 {
  │                               ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_as_function_params.move:3:37
  │
3 │     fun add_signed(a: i64, b: i64): i64 {
  │                                     ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_as_function_params.move:8:29
  │
8 │         let _r = add_signed(1i64, 2i64);
  │                             ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_as_function_params.move:8:35
  │
8 │         let _r = add_signed(1i64, 2i64);
  │                                   ^^^^ Signed integer types are under development
